# TITRATE

./: .pre-commit-config.yaml  README.md  Test SciPy chi2.ipynb  environment.yml  setup.cfg  test.py
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
examples/: Analysis.ipynb  Validation.ipynb
examples/.ipynb_checkpoints/: validation-checkpoint.md
titrate/: conftest.py  datasets.py  plotting.py  statistics.py  tests.py  upperlimits.py  utils.py  validation.py
titrate/tests/: test_datasets.py  test_statistics.py  test_upperlimits.py  test_utils.py  test_validation.py
