[metadata]
name = titrate
version = 0.4.1
author = Stefan Fröse
author_email = stefan.froese@tu-dortmund.de
description = asympTotic lIkelihood Tests for daRk mAtTer sEarch
long_description = file: README.md
license = BSD-3-Clause
url = https://github.com/StFroese/TITRATE
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy
    matplotlib
    gammapy
    joblib
    astropy
    h5py

[options.extras_require]
tests =
    pytest
